- homunculus_teleportAuto_totalDmg <damage>
- homunculus_teleportAuto_totalDmgInLock <damage>
- homunculus_teleportAuto_unstuck <boolean flag>
    same as the teleportAuto* counterparts.
- Shared Block Attributes: homunculus_hp <hp>[%] and homunculus_sp <sp>[%]
    same as the hp/sp block attributes. These are useful for using homunculus
	skills on your skill blocks

New commands:
- homun < s | status | feed | move | standby | ai | aiv | skills >
    homun s: display homunculus status
    homun feed: manually feed homunculus
    homun move: basic homunculus move command (similar to 'move' command)
    homun standby: basic homunculus standby command
    homun ai: homunculus AI management (similar to 'ai' command)
    homun aiv: display homunculus AI sequences
    homun skills: homunculus skills management (similar to 'skills' command)

Internal:
- The Console::Other interface has been removed in favor of the Console::Unix
  interface. This only affects OpenKore when running on a Unix, such as Linux.
- Item has been renamed to Actor::Item for consistency.

Credits:
- Molag: Ayothaya portals contributions.
- DarkShado: XileRO server information updates.
- johnny: Homunculus skills


==================
### 1.9.1
==================

*** INCOMPATIBLE CHANGES ***:
- Config option 'exeName' renamed to 'XKore_exeName'.
- Renamed skill: "A Moonlit Water Mill"
- Format of skills.txt have changed.

** Major updates in this release:
- Much improved server compatibility. (Note: pRO Lighthalzen is NOT supported yet!)
- Support for more maps.
- Support for multiple languages. OpenKore has currently been translated to:
    Simplified Chinese, Portuguese, Thai, Tagalog, Indonesian
  OpenKore will automatically detect your language by looking at what
  language your Windows version is.
- Many bug fixes.


** Detailed list of changes:

Bug fixes:
- Fixed the unknown packets when switching characters on servers
  that requires GameGuard to login